# saki

./: Cargo.toml  LICENCE  README.md  ]
crates/saki/: Cargo.toml
crates/saki-core/: Cargo.toml
crates/saki-core/src/: lib.rs
crates/saki-draw/: Cargo.toml
crates/saki-draw/src/: lib.rs
crates/saki/src/: main.rs
crates/ski/: Cargo.toml
crates/ski-core/: Cargo.toml
crates/ski-core/src/: lib.rs
crates/ski-draw/: Cargo.toml
crates/ski-draw/src/: app.rs  context.rs  executor.rs  gpu.rs  jobs.rs  lib.rs  math.rs  paint.rs  renderer.rs  scene.rs  window.rs
crates/ski-draw/src/app/: context.rs  events.rs
crates/ski-draw/src/gpu/: error.rs  surface.rs
crates/ski-draw/src/paint/: draw_list.rs
crates/ski-draw/src/renderer/: render_target.rs
crates/ski-draw/src/scene/: shader.wgsl
crates/ski-draw/src/window/: manager.rs
crates/ski/src/: main.rs
examples/: Cargo.toml
examples/canvas/: Cargo.toml
examples/canvas/src/: main.rs
examples/skie_draw_app/: Cargo.toml  README.md
examples/skie_draw_app/src/: main.rs
examples/skie_draw_canvas/: Cargo.toml
examples/skie_draw_canvas/src/: main.rs
examples/src/: main.rs
examples/src/skie_draw_app/: README.md  mod.rs
examples/src/skie_draw_canvas/: mod.rs
ski/: README.md
ski/ski/: Cargo.toml
ski/ski-draw/: Cargo.toml
ski/ski-draw/src/: gpu.rs  lib.rs  math.rs  paint.rs  renderer.rs  scene.rs
ski/ski-draw/src/gpu/: surface.rs
ski/ski-draw/src/math/: rect.rs  size.rs  unit.rs
ski/ski-draw/src/paint/: atlas.rs  draw_list.rs  texture.rs
ski/ski-draw/src/renderer/: render_target.rs
ski/ski-draw/src/scene/: shader.wgsl
ski/ski/src/: app.rs  lib.rs  window.rs
ski/ski/src/app/: context.rs
skie/: README.md
skie/sandbox-canvas/: Cargo.toml
skie/sandbox-canvas/src/: main.rs
skie/skie/: Cargo.toml
skie/skie-draw/: Cargo.toml
skie/skie-draw/src/: app.rs  arc_string.rs  canvas.rs  draw.rs  gpu.rs  lib.rs  math.rs  paint.rs  painter.rs  renderer.rs  scene.rs  skie_draw.rs  text.rs  text_system.rs  traits.rs
skie/skie-draw/src/canvas/: backend_target.rs  builder.rs  offscreen_target.rs  render_list.rs  snapshot.rs  surface.rs
skie/skie-draw/src/earcut/: mod.rs  utils3d.rs
skie/skie-draw/src/gpu/: error.rs  surface.rs
skie/skie-draw/src/math/: geometry.rs  mat3.rs  rect.rs  size.rs  unit.rs  vec2.rs
skie/skie-draw/src/paint/: atlas.rs  brush.rs  color.rs  draw_list.rs  geometry.rs  graphics_instruction.rs  image.rs  instruction.rs  mesh.rs  path.rs  polyline.rs  primitives.rs  render_list.rs  stroke_tesselate.rs  text.rs  texture.rs
skie/skie-draw/src/path/: builder.rs  geo.rs  mod.rs  p2d.rs  path_.rs  polygon.rs
skie/skie-draw/src/renderer/: render_target.rs
skie/skie-draw/src/scene/: shader.wgsl
skie/skie-draw/src/text/: system.rs  textarea.rs
skie/skie-draw/src/text_system/: cosmic_text.rs  font_due.rs  mod.rs
skie/skie-math/: Cargo.toml
skie/skie-math/src/: geometry.rs  mat3.rs  math.rs  rect.rs  size.rs  vec2.rs
skie/skie/src/: app.rs  arena.rs  jobs.rs  layout.rs  lib.rs  skie.rs  style.rs  unit.rs  view.rs  window.rs
skie/skie/src/_app/: context.rs  events.rs
skie/skie/src/app/: async_context.rs  context.rs  events.rs  handle.rs  world.rs
skie/skie/src/elements/: div.rs  mod.rs  text.rs
skie/skie/src/jobs/: timer.rs
skie/skie/src/window/: error.rs  painter.rs
