[workspace]
resolver = "2"
members = ["crates/*", "ski/*"]
default-members = ["crates/saki"]

[workspace.dependencies]
ski = { path = "./ski/ski" }
winit = "0.30.5"
wgpu = "23.0.0"
pollster = "0.4.0"
async-task = "4.7.1"
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"
thiserror = "2.0.3"
derive_more = "1.0.0"
parking_lot = "0.12.3"
flume = "0.11.1"
calloop = "0.14.1"
image = "0.25.5"
