[workspace]
resolver = "2"
members = ["crates/*", "skie/*"]
default-members = ["crates/saki"]

[workspace.dependencies]
skie = { path = "./skie/skie" }
winit = "0.30.5"
wgpu = "23.0.0"
pollster = "0.4.0"
async-task = "4.7.1"
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"
thiserror = "2.0.3"
derive_more = { version = "1.0.0", features = ["full"] }
parking_lot = "0.12.3"
flume = "0.11.1"
calloop = "0.14.1"
image = "0.25.5"
ahash = "0.8.11"
parking = "2.2.1"
