[package]
name = "ski-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
winit.workspace = true
log.workspace = true
thiserror.workspace = true
ahash.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
bytemuck = { version = "1.20.0", features = ["derive"] }
etagere = "0.2.13"
