[package]
name = "skie-draw"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/draw.rs"

[dependencies]
wgpu.workspace = true
winit.workspace = true
log.workspace = true
thiserror.workspace = true
ahash.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
anyhow.workspace = true
smallvec.workspace = true

skie-math = { path = "../skie-math" }
bytemuck = { version = "1.20.0", features = ["derive"] }

etagere = "0.2.13"
cosmic-text = "0.12.1"
