[package]
name = "skie-draw"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/skie_draw.rs"

[dependencies]
# Workspace 
wgpu.workspace = true
log.workspace = true
thiserror.workspace = true
ahash.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
anyhow.workspace = true
smallvec.workspace = true
futures.workspace = true

# Optional
winit = { workspace = true, optional = true } # if using application feature

skie-math = { path = "../skie-math" }

bytemuck = { version = "1.20.0", features = ["derive"] }
# atlas allocation
etagere = "0.2.13"
cosmic-text = "0.12.1"

[features]
default = []
all = ["application"]
# provides a quick start application module backed by winit
application = ["dep:winit"]
experimental = []
