[package]
name = "skie"
version = "0.1.0"
edition = "2021"

[dependencies]
skie-draw = { path = "../skie-draw" }
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
log.workspace = true
thiserror.workspace = true
async-task.workspace = true
parking_lot.workspace = true
flume.workspace = true
image.workspace = true
calloop.workspace = true
