[package]
name = "skie"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/skie.rs"

[dependencies]
skie-draw = { path = "../skie-draw" }
derive_more.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
log.workspace = true
thiserror.workspace = true
async-task.workspace = true
parking_lot.workspace = true
parking.workspace = true
flume.workspace = true
image.workspace = true
ahash.workspace = true
anyhow.workspace = true
